# xilian-agent

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  OPTIMIZATION_NOTES.md  PROJECT_PROGRESS.md  README.md  alembic.ini  bench_speed.py  docker-compose.yml  main.py  pyproject.toml  xilian.spec  使用说明.md
alembic/: env.py
data/: character_memories.json
docs/: api-reference.md  architecture-overview.md  database-schema.md  deployment.md  prompts-overview.md
gateway/: __init__.py  gateway.py  security.py
hooks/: hook-sqlite_vec.py
photo/: background_config.json  fengge.txt
prompts/: CHANGELOG.md  game-knowledge.md  personality_v1.md  personality_v2.md  personality_v3.md  personality_v4.md
scripts/: seed_character_memories.py  setup.sh  start.sh
skills/: caveman  diagnose  grill-with-docs  handoff  prototype  setup-matt-pocock-skills  tdd  to-issues  to-prd  triage  write-a-skill  zoom-out
tests/: test_attention_scheduler.py  test_backup.py  test_biography.py  test_coarse_grain_engine.py  test_coding_delegate.py  test_console_channel.py  test_context_builder.py  test_database_expansion.py  test_emotion_analyzer.py  test_emotion_appraisal.py  test_emotion_core.py  test_empathy_injection.py  test_forgetting.py  test_heartbeat.py  test_http_channel.py  test_marker_parser.py  test_memory_integration.py  test_memory_manager.py  test_micro_event_extractor.py  test_notebook_manager.py  test_nudge_engine.py  test_persona_boost.py  test_personality.py  test_personality_regression.py  test_portrait_guidance.py  test_portrait_integration.py  test_security.py  (+5 more)
(+20 files in other folders)
