[project]
name = "xilian-v3"
version = "0.1.0"
description = "昔涟 V3.2 · 心之涟漪 — 个人情感陪伴型 AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "ollama>=0.4",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
