[project]
name = "xilian-v3"
version = "0.1.0"
description = "昔涟 V3.2 · 心之涟漪 — 个人情感陪伴型 AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "sqlite-vec>=0.1.9",
    "rich>=13.0",
    "alembic>=1.18.4",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
tray = [
    "pystray>=0.19",
    "Pillow>=10.0",
]
	anthropic = [
	    "anthropic>=0.49",
	]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
tray = [
    "pillow>=12.2.0",
    "pystray>=0.19.5",
]
